Minor styles added to global and event attributes

--- a/htmlElements/basicHTML/html.html
+++ b/htmlElements/basicHTML/html.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Page to display the uses of the html element">
     
     <title>&lt;html&gt;</title>
 </head>
@@ -12,7 +13,7 @@
 <!-- &lt; &gt; -->
 <body>
 
-    <h1> - &lt;&gt;</h1>
+    <h1>Html - &lt;html&gt;</h1>
     <p></p>
 
     <br>
