--- a/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
+++ b/htmlEventAttributes/mouseEventAttributes/mouseEventAttributes.html
@@ -4,7 +4,12 @@
     <meta charset="UTF-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <style>
+        details[open] {
+            background-color: antiquewhite;
+        }
+    </style>
+    
     <title>Mouse Event Attributes</title>
 </head>
 <body>
