--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -5,6 +5,11 @@
     <meta charset="utf-8">
     <meta name="author" content="Stephen Mogg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        details[open] {
+            background-color: antiquewhite;
+        }
+    </style>
     
     <title>Html Attributes</title>
 </head>
