hidden attribute complted

--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -218,25 +218,21 @@
     <details>
         <summary><b>hidden</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>This attribute specifies whether an element is relevent or not. Browsers wont render elements that have the hidden attribute set. THis attribute can also be used keep a user from seeing an element untill some other condition has been met which could be selecting a checkbox. Javascript can be used to remove hidden attributes and make the element visible.</p>
+        <p>Hidden elements should not be linked to in the webpage. A hidden elements child elements will be displayed and are active. This means that scripts can still execute on them.</p>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p>Visible Paragraph</p>
+        <p hidden>Not visible parargraph</p>
+        <button>Visible button</button><br>
+        <button hidden>Not Visible button</button><br>
+        <img src="./0media/images/hiddenImage.png" alt=""><br>
+        <img hidden src="./0media/images/hiddenImage.png" alt="">
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/hiddenExample.png">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
-
-        <h3>Attribute values: </h3>
-        <p></p>
-
+        <p>&lt;element hidden&gt;</p>
     </details>
     <details>
         <summary><b>id</b></summary>
