lang attribute completed

--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -24,6 +24,10 @@
         .divFloat{
             float: left;
         }
+        #pIdStyle{
+            color: white;
+            background-color: black;
+        }
     </style>
     <script language="javascript">  
         function ChangeColor()  
@@ -237,47 +241,42 @@
     <details>
         <summary><b>id</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>The id attribute is used to specify a unique id for an html element.(the value must be unqiue and not copied throughout the html document) It is mostly used to point to a style in a style sheet, which can be later manipulated with javascript via the html dom.</p>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p id="pIdStyle">Id styled paragraph</p>
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/idExample.png">
+        <img src="./0media/images/idStyleExample.png" alt="">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
+        <p>&lt;element id="id"&gt;</p>
 
         <h3>Attribute values: </h3>
-        <p></p>
+        <p>id - Specify a unique id for the element. The id must contain at least one character and must not contain any space characters.</p>
 
     </details>
     <details>
         <summary><b>lang</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>The language attribute specifies the language of an elements content. Common examples are "en" for english, "es" for spanish, "fr" for french and so on.</p>
+        <p>If the lang attribute is empty then the language is set to unknown.</p>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p lang="en">This is english!</p>
+        <p lang="de">Das ist Englisch!</p>
+        <p lang="it">Questo è inglese!</p>
+        <p lang="fr">C'est Anglais!</p>
+        <p lang="uk">Це англійська мова!</p>
+        <p lang="ru">Это английский!</p>
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/langExample.png">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
+        <p>&lt;element lang="language_code"&gt;</p>
 
         <h3>Attribute values: </h3>
-        <p></p>
+        <p>language_code - specifies the language code for the elements content</p>
 
     </details>
     <details>
