--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -282,24 +282,22 @@
     <details>
         <summary><b>spellcheck</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>The spellcheck attribute specifies whether an elements content is to have its spelling and grammar checked or not. The following values can be spellchecked.</p>
+        <li>Text values in a input elements(not passwords)</li>
+        <li>Text in textarea elements</li>
+        <li>Text in editable elements</li>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p contenteditable="true" spellcheck="true">Write here! This is spelt wrongg. This is spelt right.</p>
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/spellcheckExample.png">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
+        <p>&lt;element spellcheck="true|false"&gt;</p>
 
         <h3>Attribute values: </h3>
-        <p></p>
+        <p>true - The element is to have its spelling and grammar checked</p>
+        <p>false - The element is not to be checked</p>
 
     </details>
     <details>
