--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -303,24 +303,18 @@
     <details>
         <summary><b>style</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>The style attribute specifies an inline style for an element. This will override any set style globally. The style attribute can be used on any html element.</p>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p style="color: tomato; background-color: turquoise; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;">styled text</p>
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/stlyeExample.png">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
+        <p>&lt;element style="style_definitions"&gt;</p>
 
         <h3>Attribute values: </h3>
-        <p></p>
+        <p>style_definitions - one or more css properties and values separated by semicolons(e.g style="color:Blue; text_align:center")</p>
 
     </details>
     <details>
