--- a/htmlGlobalAttributes/htmlGlobalAttributes.html
+++ b/htmlGlobalAttributes/htmlGlobalAttributes.html
@@ -320,24 +320,22 @@
     <details>
         <summary><b>tabindex</b></summary>
 
-        <p></p>
-
-        <br>
+        <p>The tabindex attribute specifies the tab order of an element within the webpage. The tab key will cycle through elements on the webpage for quick access. This can be used on any html element. Below with the use of tab you can see how it follows the tab order we have supplied.</p>
+        <p>A negative value means that the element is not reachable via sequential keyboard navigation. A "0" value means that the element is focusable by sequential keyboard navigation.</p>
 
         <h3>Examples:</h3>
-        <img src="">
+        <p tabindex="2">tab order 2</p>
+        <p tabindex="1">tab order 1</p>
+        <p tabindex="4">tab order 4</p>
+        <p tabindex="3">tab order 3</p>
         <p>This is how its coded:</p>
-        <img src="">
-
-        <br>
+        <img src="./0media/images/tabindexExample.png">
 
         <h3>Syntax:</h3>
-        <p>&lt; &gt;</p>
-
-        <br>
+        <p>&lt;element tabindex="number"&gt;</p>
 
         <h3>Attribute values: </h3>
-        <p></p>
+        <p>number - specifies the tabbing order of the element</p>
 
     </details>
     <details>
